# tralala-vrumvrumvrum

./: README.md  docker-compose.yml
arduino/: README.md  VrumVrumVrum.ino
backend/: API-EXAMPLES.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
flask/: app.py
frontend/: README.md  index.html  nginx.conf
frontend/assets/js/: gesture-recognition.js  gestures.js  mic.js  randomizer.js  request.js
frontend/control/: index.html
frontend/setup/: index.html
my-app/: index.html  index.js
my-app/base/: index.html
proxy/: README.md  nginx.conf
public/: index.html
public/control/: index.css  index.html
public/js/: gesture-recognition.js  gestures.js  mic.js  randomizer.js  request.js
public/setup/: index.html
serial-api/: README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
test/nginx-proxy-app/backend/src/: app.py
vehicle/: README.md  Vehicle.ino
